--- a/pages/index.html
+++ b/pages/index.html
@@ -83,79 +83,78 @@
         color: var(--turquoise);
       }
     </style>
-
-    <!-- Import Navbar -->
-    <script
-      src="https://code.jquery.com/jquery-3.7.1.js"
-      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-      crossorigin="anonymous"
-    ></script>
-    <script>
-      $(function () {
-        $("#navbar").load("../components/navbar.html");
-        $("#footer").load("../components/footer.html");
-      });
-    </script>
   </head>
+
+  <!-- Import Navigation Bar -->
+  <script
+    src="https://code.jquery.com/jquery-3.7.1.js"
+    integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+    crossorigin="anonymous"
+  ></script>
+  <script>
+    $(function () {
+      $("#navbar").load("../components/navbar.html");
+      $("#footer").load("../components/footer.html");
+    });
+  </script>
+
   <body>
-    <div class="flex-container">
-      <!-- Import Navbar -->
-      <div id="navbar"></div>
-      <!-- Main Section -->
-      <div class="content">
-        <div class="landing-img">
-          <div class="landing-catchphrase-1">
-            <h1>
-              Curated excursions <br />
-              designed for Tufts students!
-            </h1>
-          </div>
+    <!-- Import Navbar -->
+    <div id="navbar"></div>
+    <!-- Main Section -->
+    <div class="content">
+      <div class="landing-img">
+        <div class="landing-catchphrase-1">
+          <h1>
+            Curated excursions <br />
+            designed for Tufts students!
+          </h1>
         </div>
+      </div>
 
-        <!-- Information -->
-        <div class="section">
-          <h2 class="heading">Our Offerings</h2>
-          <p class="text">
-            Discover how we can make your travel experience unforgettable!
-          </p>
-          <p class="text">
-            <a href="services-offered.html">Our Services</a> - Explore our range
-            of offerings to support your journey.
-          </p>
-          <p class="text">
-            <a href="destination-guides.html">Destination Guides</a> - Get
-            detailed information on popular destinations.
-          </p>
-          <p class="text">
-            <a href="travel-resources.html">Travel Resources</a> - Access
-            essential tips and tricks for getting around.
-          </p>
-        </div>
+      <!-- Information -->
+      <div class="section">
+        <h2 class="heading">Our Offerings</h2>
+        <p class="text">
+          Discover how we can make your travel experience unforgettable!
+        </p>
+        <p class="text">
+          <a href="services-offered.html">Our Services</a> - Explore our range
+          of offerings to support your journey.
+        </p>
+        <p class="text">
+          <a href="destination-guides.html">Destination Guides</a> - Get
+          detailed information on popular destinations.
+        </p>
+        <p class="text">
+          <a href="travel-resources.html">Travel Resources</a> - Access
+          essential tips and tricks for getting around.
+        </p>
+      </div>
 
-        <!-- Testimonials -->
-        <div class="section">
-          <h2 class="heading">What Our Travelers Say</h2>
-          <p class="text">
-            "An unforgettable experience!" - Sarah T.<br />"I loved the
-            destinations!" - Mark A.<br />
-            <a href="blog-client-testimonials.html">Hear more from others!</a>
-          </p>
-        </div>
+      <!-- Testimonials -->
+      <div class="section">
+        <h2 class="heading">What Our Travelers Say</h2>
+        <p class="text">
+          "An unforgettable experience!" - Sarah T.<br />"I loved the
+          destinations!" - Mark A.<br />
+          <a href="blog-client-testimonials.html">Hear more from others!</a>
+        </p>
+      </div>
 
-        <!-- About -->
-        <div class="section">
-          <h2 class="heading">What We Do</h2>
-          <p class="text"><a href="about.html">Learn more</a> about us!</p>
-        </div>
+      <!-- About -->
+      <div class="section">
+        <h2 class="heading">What We Do</h2>
+        <p class="text"><a href="about.html">Learn more</a> about us!</p>
+      </div>
 
-        <!-- Contact Us -->
-        <div class="section">
-          <h2 class="heading">Questions or Suggestions?</h2>
-          <p class="text">
-            Visit our <a href="FAQ.html">FAQs page</a> or
-            <a href="contact.html">let us know!</a>
-          </p>
-        </div>
+      <!-- Contact Us -->
+      <div class="section">
+        <h2 class="heading">Questions or Suggestions?</h2>
+        <p class="text">
+          Visit our <a href="FAQ.html">FAQs page</a> or
+          <a href="contact.html">let us know!</a>
+        </p>
       </div>
     </div>
   </body>
